--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "lucide-react": "^0.554.0",
-    "recharts": "^3.4.1",
-    "d3": "^7.9.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "lucide-react": "0.263.1",
+    "recharts": "2.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
